--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.115.0"
 uvicorn = "^0.30.6"
 sqlalchemy = "^2.0.35"
 aiosqlite = "^0.20.0"
+black = "^24.8.0"
+isort = "^5.13.2"
 
 
 [build-system]
